# hey-orac

./: .asoundrc  .dockerignore  .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_UPDATE.md  AUDIO_PREPROCESSING_IMPLEMENTATION_SUMMARY.md  AUDIO_PREPROCESSING_INTEGRATION.md  AUDIO_PREPROCESSING_STATUS.md  AUDIO_QUALITY_ANALYSIS.md  CALLBACK_IMPLEMENTATION_PROMPT.md  CLAUDE.md  CLEANUP.md  DEPLOYMENT_STRATEGY.md  DEVELOPER_GUIDE.md  Dockerfile  FIX_IT_PLAN.md  IMPLEMENT_NONBLOCKING_AUDIO.md  INSTRUCTIONS.txt  INTEGRATION_CURRENT_FOCUS.md  INTEGRATION_SUCCESS_SUMMARY.md  LOCAL_ENVIRONMENT.md  MODEL_LOADING_FIX_IT_PLAN.md  OPENWAKEWORD_FIXES_IMPLEMENTED.md  OPENWAKEWORD_FIXES_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_AND_INTEGRATE_PREPROCESSING.md  SPRINT_5_PROMPT.md  SPRINT_7_PROMPT.md  SPRINT_8_PROMPT.md  SPRINT_9_PROMPT.md  STT_API_REFERENCE.md  STT_CONNECTION_INDICATOR_IMPLEMENTATION.md  TMP_DEBUG_AUDIO.md  TOPIC_INTEGRATION_TODO.md  USER_GUIDE.md  asound.conf  claude (conflicted).md  claude.md  currentfocus (conflicted).md  (+21 more)
Documents/: Hey_ORAC_Outstanding_Requirements  Product_Outline.md  Technical_Design.md
OLD WORKING FILES/: monitor_custom_model.py  openwakeword_engine.py
OLD WORKING FILES/web/: README.md  index.html
config/: settings.json.template
current_epic/: sprint_one.md
docker/: Dockerfile
docs/: CRITICAL_PATH.txt  DEV_LOG.txt  Fixing Wake Word Detection  ProjectOutline.md  SHARED_MEMORY_ACTIVATION.md  TMPFS_STORAGE_SETUP.md  WAKE_WORD_DETECTION_DEBUG.md
models/: Hey_computer.tflite  hey-CompUter_lrg.onnx
models/openwakeword/: Hay--compUta_v_lrg.tflite  Hey_computer.onnx  (+1 more)
scripts/: build_image.sh  cleanup_settings.sh  debug_audio.sh  deploy_and_test.sh  monitor_detections.sh  old_cleanup_settings.sh  reset_settings.sh  test_audio_isolated.sh  test_detection_fix.sh  test_fixes.sh  test_shared_memory_activation.sh  test_shared_memory_simple.sh  test_speaker_on_pi.sh  verify_activation_system.sh  verify_detection_fix.sh
src/: LEGACY_test_custom_model.py  LEGACY_test_m1.py  LEGACY_wake_word_detection_custom.py  LEGACY_wake_word_detection_enhanced.py  audio_buffer.py  audio_feedback.py  audio_pipeline.py  audio_pipeline_new.py  audio_utils.py  base_monitor.py  compare_engines.py  config.yaml  config_handler.py  debug_openwakeword.py  dev_audio_test.py  led_controller.py  main.py  main_new.py  main_test.py  monitor_custom_model.py  monitor_default_model.py  rms_monitor.py  settings_manager.py  shared_memory_ipc.py  startup.sh  test_audio_device.py  test_beep_explicit.py  test_custom_models.py  test_custom_models_individually.py  test_m1.py  test_openwakeword_basic.py  test_openwakeword_model.py  test_pi_audio.py  test_portaudio.c  test_prediction_buffer.py  test_pyaudio.py  test_pyaudio_minimal.py  test_speaker.py  test_speaker_local.py  test_tflite_integration.py  (+7 more)
tests/: conftest.py  test_wakeword.py
web/: index.html
(+38 files in other folders)
