[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hey-orac"
version = "1.0.0"
description = "Hey ORAC Wake-Word Module for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "2oby", email = "toby@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openwakeword==0.6.0",
    "numpy<2.0.0,>=1.21.0",
    "pyaudio>=0.2.11",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "structlog>=24.0.0",
    "jsonschema>=4.20.0",
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
    "gevent>=24.0.0",
    "tflite-runtime>=2.14.0; platform_machine=='aarch64'",
    "tensorflow>=2.10.0; platform_machine!='aarch64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
hey-orac = "hey_orac.cli:main"

[project.urls]
"Homepage" = "https://github.com/2oby/hey-orac"
"Bug Tracker" = "https://github.com/2oby/hey-orac/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]